[gd_scene load_steps=32 format=3 uid="uid://qiigu6c0kpca"]

[ext_resource type="Script" path="res://scripts/mage.gd" id="1_e8xs4"]
[ext_resource type="Texture2D" uid="uid://debt8yhkn1ptr" path="res://assets/creatures/dark_mage_teleport_in.png" id="2_yi2k6"]
[ext_resource type="Texture2D" uid="uid://be3jkga3yl1yb" path="res://assets/creatures/dark_mage_attack.png" id="3_ovdaa"]
[ext_resource type="Texture2D" uid="uid://bmhitej4ft063" path="res://assets/creatures/dark_mage_teleport_out.png" id="4_eqrjc"]
[ext_resource type="PackedScene" uid="uid://cogx87p0pb6a4" path="res://scenes/ui/hitbox.tscn" id="4_lvguj"]
[ext_resource type="StyleBox" uid="uid://d2t0uqgjiwara" path="res://assets/ui/enemy_health_bar_style.tres" id="6_n61af"]
[ext_resource type="PackedScene" uid="uid://crrnxfsllyj6p" path="res://scenes/hit_tweener.tscn" id="6_og654"]
[ext_resource type="AudioStream" uid="uid://rgwcvadbm0nl" path="res://assets/audio/mage.ogg" id="8_pg2a2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ggjeo"]
size = Vector2(48, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_bp6sm"]
atlas = ExtResource("3_ovdaa")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lv8gm"]
atlas = ExtResource("3_ovdaa")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_klsup"]
atlas = ExtResource("2_yi2k6")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_83mg1"]
atlas = ExtResource("2_yi2k6")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpa6w"]
atlas = ExtResource("2_yi2k6")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_80y87"]
atlas = ExtResource("2_yi2k6")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbx6h"]
atlas = ExtResource("2_yi2k6")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vp2l"]
atlas = ExtResource("2_yi2k6")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4urg3"]
atlas = ExtResource("2_yi2k6")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sit0g"]
atlas = ExtResource("2_yi2k6")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_po5jj"]
atlas = ExtResource("2_yi2k6")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3y5d"]
atlas = ExtResource("4_eqrjc")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8g1p"]
atlas = ExtResource("4_eqrjc")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jegq"]
atlas = ExtResource("4_eqrjc")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohtek"]
atlas = ExtResource("4_eqrjc")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmqe7"]
atlas = ExtResource("4_eqrjc")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_71rhq"]
atlas = ExtResource("4_eqrjc")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7atie"]
atlas = ExtResource("4_eqrjc")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6pp8"]
atlas = ExtResource("4_eqrjc")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6dt0"]
atlas = ExtResource("4_eqrjc")
region = Rect2(512, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_8ddyf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bp6sm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lv8gm")
}],
"loop": true,
"name": &"shooting",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_klsup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83mg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpa6w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80y87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbx6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vp2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4urg3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sit0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_po5jj")
}],
"loop": false,
"name": &"teleport_in",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3y5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8g1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jegq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohtek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmqe7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71rhq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7atie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6pp8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6dt0")
}],
"loop": false,
"name": &"teleport_out",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nincq"]
size = Vector2(39, 97)

[node name="Mage" type="CharacterBody2D" groups=["enemy"]]
position = Vector2(2.08165e-12, 2.08165e-12)
collision_layer = 32
motion_mode = 1
script = ExtResource("1_e8xs4")
kill_points = 100
max_health = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 2
position = Vector2(2, 47)
shape = SubResource("RectangleShape2D_ggjeo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
y_sort_enabled = true
texture_filter = 1
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_8ddyf")
animation = &"teleport_out"
autoplay = "teleport_in"
flip_h = true

[node name="MuzzleNotFlipped" type="Node2D" parent="."]
position = Vector2(-48, -58)
scale = Vector2(4, 4)

[node name="MuzzleFlipped" type="Node2D" parent="."]
position = Vector2(48, -58)
scale = Vector2(4, 4)

[node name="Hitbox" parent="." instance=ExtResource("4_lvguj")]

[node name="HealthBar" parent="Hitbox" index="0"]
offset_top = 88.0
offset_bottom = 96.0
theme_override_styles/fill = ExtResource("6_n61af")

[node name="CollisionShape2D" parent="Hitbox" index="1"]
z_index = 3
position = Vector2(-0.5, -4)
shape = SubResource("RectangleShape2D_nincq")
debug_color = Color(0.733333, 0.403922, 0.639216, 0.419608)

[node name="HitTweener" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("6_og654")]
sprite = NodePath("../AnimatedSprite2D")

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[node name="SFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_pg2a2")
volume_db = -4.0

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]

[editable path="Hitbox"]
